--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
     "react-scroll-parallax": "^3.4.3",
