--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,16 +8,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase-admin": "^11.10.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "eslint": "^8.56.0",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint": "^8.57.1",
+    "eslint-plugin-node": "^11.1.0",
+    "nodemon": "^2.0.22"
   }
 }
-
